--- a/less/components/_main.less
+++ b/less/components/_main.less
@@ -810,6 +810,7 @@ dl.meta {
 				color:@gray;
         font-size: 17px;
         line-height: 20px;
+				margin-bottom: 0;
       }
 
       .meta_institute {
