--- a/less/portal.less
+++ b/less/portal.less
@@ -748,12 +748,15 @@ a.view-all-breaking-news {
 
 
 .science-thumb {
-	img {
 	max-width: 60px;	
 	height:auto;
 	margin-left: 13px;
-	padding: 2px;
-	float:right;
+	padding: 4px;
+	border: 1px solid @lightGray;
+	background: @white;
+	img {
+	width: 100%;	
+	height:auto;
 //	border: 1px solid @lightGray;
 		}
 }
@@ -850,7 +853,7 @@ a.view-all-breaking-news {
 	.headline {
 		border-bottom: none;
 		padding: 0;
-		margin: 0;
+		margin: 0 0 25px;
 	}
 
   .newsletter {
